Removed apply buttons from button css type to prevent override

--- a/app/app.css
+++ b/app/app.css
@@ -165,8 +165,7 @@ textarea {
 }
 
 button[type="submit"],
-.comment-section button,
-.apply-button {
+.comment-section button {
   display: block;
   width: 100%;
   background: black;
