Change sidebar checkbox colour to white

--- a/app/app.css
+++ b/app/app.css
@@ -331,4 +331,8 @@ button[type="submit"]:hover,
   background-color: #005fa3;
 }
 
+.sidebar input[type="checkbox"] {
+  accent-color: white;
+}
+
 
