--- a/app/app.css
+++ b/app/app.css
@@ -346,6 +346,12 @@ button[type="submit"]:hover,
   background-color: #005fa3;
 }
 
+.sidebar ul {
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+
 
 
 
