--- a/app/app.css
+++ b/app/app.css
@@ -52,7 +52,7 @@ button {
 	background-color: var(--accentcolor);
 	border: 0;
 	padding: 10px;
-	margin-top: 20px;
+	margin-top: 1.4vh;
 }
 button:hover {
 	background-color: var(--accentcolorhover);
@@ -123,7 +123,7 @@ button:hover {
   font-size:1.5em;
   font-weight:600;
   background-color: var(--accentcolor);
-  margin-top: 1.4%;
+  margin-top: 1.4vh;
   height: 60%;
   padding:3px;
   color: var(--darkcolor);
