--- a/app/app.css
+++ b/app/app.css
@@ -538,6 +538,18 @@ button[type="submit"]:hover {
     	cursor: pointer;
 }
 
+/*Hide mobile buttons on PC*/
+.opensidebarbutton, .closesidebarbutton {
+	display:none;
+}
+#sidebar-active {
+	display:none;
+}
+/*Colour of icons light mode */
+svg {
+	fill: var(--darkcolor);
+}
+
 /*Dark mode*/
 @media (prefers-color-scheme: dark) {
 	body {
@@ -623,11 +635,49 @@ button[type="submit"]:hover {
 	}
 	.logout-button {
     		background-color: #000;   
-    		color: var(--lightcolor);              
+    		color: var(--lightcolor);
+	svg {
+		fill: var(--lightcolor);
+	}
   }
-	/*content {
-		background-color: var(--backgroundlight);
+@media (max-width:800px){
+	.navbar{
+		height:3vh;
+		font-size: 1em;
+	}
+	#logo{
+		height:3vh;
+	}
+	.job-details {
+		width:95%;
+	}
+	/*.sidebar {
+		width:0%;
 	}*/
+	.sidebar{
+		display:none;
+		flex-direction:column;
+		align-items: flex-start;
+		position:fixed;
+		top:3vh;
+		right;0;
+		z-index:10;
+		width: 70vw;
+		height: 97vh;
+	}
+	nav a {
+		box-sizing: border-box;
+		height:auto;
+		width:100%;
+		justify-content:flex-start;
+	}
+	.opensidebarbutton, .closesidebarbutton {
+		display:block;
+	}
+	#sidebar-active:checked ~ .sidebar{
+		display:flex;		
+	}
+}
 }
 
 
